@@ -28,6 +28,8 @@ linux (4.13.4-1~exp1) UNRELEASED; urgency=medium
   * debian/control: Remove obsolete workarounds and alternate build deps
   * usbip: Stop building broken libusbip-dev package
   * Rename lintian-overrides template files to be consistent
+  * linux-image-dbg: Override lintian errors binary-from-other-architecture and
+    shlib-without-PT_GNU_STACK-section for vDSOs
 
   [ Uwe Kleine-König ]
   * [arm64] really enable NET_DSA_MV88E6XXX for Espressobin
